--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
                             <h2 class="advantages__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Преимущества</span></h2>
                             <div class="advantages__tabs" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
                                 <nav class="advantages__items">
-                                    <div class="advantages__icon advantages__icon_monitor active"></div>
-                                    <div class="advantages__icon advantages__icon_like"></div>
-                                    <div class="advantages__icon advantages__icon_presentation"></div>
+                                    <div class="advantages__icon advantages__icon_1 active"></div>
+                                    <div class="advantages__icon advantages__icon_2"></div>
+                                    <div class="advantages__icon advantages__icon_3"></div>
                                 </nav>
                                 <div class="advantages__text">
                                     <div class="advantages__description active">
-                                        <h3 class="advantages__subtitle">Выгодные цены.</h3>
+                                        <h3 class="advantages__subtitle">Выгодные цены</h3>
                                         <p class="advantages__words">Минимальная цена сайта составляет 7.000 рублей, а учитывая регулярно проходящии у нас акции, цена может быть еще ниже. Такой ценовой политики мы можем придерживаться благодаря оптимизации затрат на собственные нужды: мы не арендуем офис - наша команда работает удаленно, а также в нашем штате работает всего несколько сотрудников, которые справляются со своими задачами.</p>
                                     </div>
                                     <div class="advantages__description">
-                                        <h3 class="advantages__subtitle">Тщательный анализ вашего бизнеса и конкурентов.</h3> 
-                                        <p class="advantages__words">Благодаря аналитике вашей деятельности, мы создаем сайты с максимально подробным и качественным описанием, что дает вашему клиенту ясное понимание об услуге или товаре, и это натолкнет его на заказ.</p>    
+                                        <h3 class="advantages__subtitle">Изучение вашего бизнеса</h3> 
+                                        <p class="advantages__words">Благодаря скрупулезному анализу вашего бизнеса мы создаем сайты с максимально подробным и релевантным наполнением, для того, чтобы клиент не сомневаясь оставил заявку. Лендинг должен соответствовать потребностям и желаниям посетителя, чтобы вы смогли попасть прямо в цель.</p>    
                                     </div>
                                     <div class="advantages__description">
-                                        <h3 class="advantages__subtitle">Рост продаж.</h3>
-                                        <p class="advantages__words">10 из 10 заказчиков, спустя максимум неделю после запуска органического трафика на свои лендинги, заявляли об увеличении количества заявок, что говорит о продающей способности наших сайтов. Для нас главная цель - это не просто создать сайт, чтобы он был, а сделать так, чтобы он принес заказчику прибыль.</p>    
+                                        <h3 class="advantages__subtitle">Рост продаж</h3>
+                                        <p class="advantages__words">10 из 10 заказчиков, спустя максимум неделю после запуска органического трафика на свои лендинги, заявляли об увеличении количества заявок, что говорит о продающей способности наших сайтов. Для нас главная цель - это не просто создать сайт, а сделать так, чтобы он принес заказчику прибыль.</p>    
                                     </div>
                                 </div>
                             </div>
