--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Разработка лендингов и сайтов-визиток для бизнеса. Выгодные цены на сайты. Работа под ключ. Переходите на сайт и заказывайте со скидкой 30%.">
     <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Нужен сайт</title>
+    <title>Создание одностраничного сайта под ключ от 4.990 рублей</title>
 </head>
 <body>
 <main class="wrap">
@@ -34,8 +34,8 @@
                 <section class="advantages">
                     <div class="advantages__container container">
                         <div class="advantages__row">
-                            <h2 class="advantages__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Преимущества</span></h2>
-                            <div class="advantages__tabs" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
+                            <h2 class="advantages__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="700"><span>Преимущества</span></h2>
+                            <div class="advantages__tabs" data-swiper-parallax="-500" data-swiper-parallax-duration="700">
                                 <nav class="advantages__items">
                                     <div class="advantages__icon advantages__icon_1 active"></div>
                                     <div class="advantages__icon advantages__icon_2"></div>
@@ -65,8 +65,8 @@
                 <section class="portfolio">
                     <div class="portfolio__container container">
                         <div class="portfolio__row">
-                            <h2 class="portfolio__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Примеры работ</span></h2>
-                            <div class="portfolio__slider swiper-container" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
+                            <h2 class="portfolio__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="700"><span>Примеры работ</span></h2>
+                            <div class="portfolio__slider swiper-container" data-swiper-parallax="-500" data-swiper-parallax-duration="700">
                                 <div class="portfolio__wrap swiper-wrapper">
                                     <div class="portfolio__slide swiper-slide">
                                         <a href="https://vtorsheb.ru/" target="_blank" class="portfolio__screen"><img src="img/1.jpg" alt=""></a>
@@ -93,8 +93,8 @@
                 <section class="reviews">
                     <div class="reviews__container container">
                         <div class="reviews__row">
-                            <h2 class="reviews__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Отзывы</span></h2>
-                            <div class="reviews__content" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
+                            <h2 class="reviews__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="700"><span>Отзывы</span></h2>
+                            <div class="reviews__content" data-swiper-parallax="-500" data-swiper-parallax-duration="700">
                                 <div class="reviews__column reviews__column_w">
                                     <div class="reviews__words words swiper-container">
                                         <div class="words__wrap swiper-wrapper">
@@ -140,8 +140,8 @@
                 <section class="plan">
                     <div class="plan__container container">
                         <div class="plan__row">
-                            <h2 class="plan__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Схема работы</span></h2>
-                            <div class="plan__content"  data-swiper-parallax="-250" data-swiper-parallax-duration="1000">
+                            <h2 class="plan__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="700"><span>Схема работы</span></h2>
+                            <div class="plan__content"  data-swiper-parallax="-250" data-swiper-parallax-duration="700">
                                 <div class="plan__point">
                                     <p class="plan__number">1</p>
                                     <div class="plan__text akkordeon">
@@ -184,7 +184,7 @@
             </div>
             <!-- Цены -->
             <div class="wrapper__page swiper-slide">
-                <section class="price" data-swiper-parallax="-250" data-swiper-parallax-duration="1000">
+                <section class="price" data-swiper-parallax="-250" data-swiper-parallax-duration="700">
                     <div class="price__container container">
                         <div class="price__row">
                             <div class="price__body">
@@ -207,7 +207,7 @@
                                                                 <li class="card__advantage">Продолжительность работы: ~2 дня</li>
                                                                 <!-- <li class="card__advantage">Lorem, ipsum dolor.</li> -->
                                                             </ul>
-                                                            <p class="card__price"><s>7.000</s><span>5.000 руб.</span></p>
+                                                            <p class="card__price"><s>7.000</s><span>4.990 руб.</span></p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -223,7 +223,7 @@
                                                                 <!-- <li class="card__advantage">Lorem, ipsum dolor.</li> -->
                                                                 <!-- <li class="card__advantage">Lorem, ipsum dolor.</li> -->
                                                             </ul>
-                                                            <p class="card__price"><s>15.000</s><span>10.000 руб.</span></p>
+                                                            <p class="card__price"><s>15.000</s><span>9.990 руб.</span></p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -268,8 +268,8 @@
                 <section class="contacts">
                     <div class="contacts__container container">
                         <div class="contacts__row">
-                            <h2 class="contacts__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Контакты</span></h2>
-                            <div class="contacts__content" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
+                            <h2 class="contacts__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="700"><span>Контакты</span></h2>
+                            <div class="contacts__content" data-swiper-parallax="-500" data-swiper-parallax-duration="700">
                                 <div class="contacts__column">
                                     <div class="contacts__body">
                                         <form action="mail.php" method="POST" class="contacts__form form-contacts">
@@ -298,8 +298,8 @@
                                         <div class="contacts__list">
                                             <!-- <p class="contacts__contact"><img src="img/phone.svg" alt="">+7 (926) 367-64-09</p> -->
                                             <p class="contacts__contact"><img src="img/whatsapp.svg" alt="">+7 (926) <w>367</w>-64-09</p>
-                                            <p class="contacts__contact"><img src="img/telegram.svg" alt="">@mitrokhin_max</p>
-                                            <p class="contacts__contact"><img src="img/gmail.svg" alt="">mitrohmax@gmail.com</p>
+                                            <p class="contacts__contact"><img src="img/telegram.svg" alt="">@wantwebsite</p>
+                                            <p class="contacts__contact"><img src="img/gmail.svg" alt="">wantwebsite@mail.ru</p>
                                         </div>
                                     </div>
                                 </div>
