--- a/privacy.html
+++ b/privacy.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Политика в отношении обработки персональных данных">
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
-    <title>Нужен сайт</title>
+    <title>Политика обработки персональных данных</title>
 </head>
 <body>
     <section class="privacy">
         <div class="privacy__container container">
             <div class="privacy__logo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
-            <div class="privacy__btn">
-                <a href="index.html" class="privacy__button"><span>Вернуться</span></a>
-            </div>
+            
             <h1 class="privacy__title">Политика в отношении обработки персональных данных</h1>
             <div class="privacy__text">                
                 <h2 class="privacy__subtitle" class="privacy__subtitle">1. Общие положения</h2 class="privacy__subtitle" class="privacy__subtitle">
@@ -67,6 +65,9 @@
                 <p>8.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты vtorsheb@bk.ru.</p>
                 <p>8.2. В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой версией.</p>
                 <p>8.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу https://vtorsheb.ru/privacy.html.</p>
+            </div>
+            <div class="privacy__btn">
+                <a href="index.html" class="privacy__button"><span>Вернуться</span></a>
             </div>
         </div>
     </section>
