--- a/success.html
+++ b/success.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="refresh" content="10;URL=index.html" />
-    <link rel="icon" href="" type="image/svg+xml">
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
-    <title>Нужен сайт</title>
+    <title>Спасибо за заявку!</title>
 </head>
 <body>
     <section class="success">
