--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                                 <input type="text" class="form-contacts__name" name="user_name" placeholder="Имя:" required>
                                             </div>
                                             <div class="form-contacts__item">
-                                                <input type="tel" id="phone_1" class="form-contacts__phone" name="user_phone" placeholder="Телефон:" required>
+                                                <input type="tel" id="phone_2" class="form-contacts__phone" name="user_phone" placeholder="Телефон:" required>
                                             </div>
                                             <!-- <div class="form-contacts__item">
                                                 <textarea rows="2" class="form-contacts__comment" name="user_comment" placeholder="Ваш вопрос (если есть):"></textarea>
@@ -346,6 +346,8 @@
     <script src="js/swiper-bundle.min.js"></script>
     <!-- Подключаем попап -->
     <script src="js/popup.js"></script>
+    <!-- подключаем MaskedInput -->
+    <script src="js/jquery.maskedinput.min.js"></script>
     <!--Подключаем файл JS скриптов-->
     <script src="js/script.js"></script>
 </body>
